--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "alexa-adapter",
-  "display_name": "Alexa",
-  "version": "0.1.3",
+  "display_name": "Philips Hue Bridge Emulator for Alexa",
+  "version": "0.1.4",
   "description": "Control your devices with alexa (currently only works with boolean properties)",
   "main": "index.js",
   "scripts": {
